--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header class="main-header">
        <div class="container">
-           <div class="logo">Ubiquity</div>
+           <div class="logo"><img src="./images/logo-main@2x.png" alt="" aria-hidden="true"></div>
            <nav class="main-nav">
                <ul class="menu">
                    <li class="menu-item menu-item-main">HOME</li>
@@ -246,6 +246,13 @@
             </article>
             <article>
                 <div class="title tags">tags</div>
+                <button class="button-tag">insider</button>
+                <button class="button-tag">check</button>
+                <button class="button-tag">demo</button>
+                <button class="button-tag">office</button>
+                <button class="button-tag">work</button>
+                <button class="button-tag">post</button>
+                <button class="button-tag">management</button>
             </article>
             <article>
                 <div class="title contact-detail">ubiquity</div>
@@ -262,18 +269,19 @@
                     <p>Hello@domaine.com</p>
                 </div>
             </article>
-            <footer>
-                <div class="container-footer">
-                    <p class="rights">2019 Ubiquity. All Rights Reserved</p>
-                    <ul class="social-network">
-                        <li class="social-network-item"><img src="./images/icons/icons8-facebook.svg" alt=""></li>
-                        <li class="social-network-item"><img src="./images/icons/icons8-twitter.svg" alt=""></li>
-                        <li class="social-network-item"><img src="./images/icons/icons8-google-plus.svg" alt=""></li>
-                    </ul>
-                </div>
-            </footer>
+            
         </div>
-      
+        <hr>
+        <footer>
+            <div class="container-footer">
+                <p class="rights">2019 Ubiquity. All Rights Reserved</p>
+                <ul class="social-network">
+                    <li class="social-network-item"><img src="./images/icons/icons8-facebook.svg" alt=""></li>
+                    <li class="social-network-item"><img src="./images/icons/icons8-twitter.svg" alt=""></li>
+                    <li class="social-network-item"><img src="./images/icons/icons8-google-plus.svg" alt=""></li>
+                </ul>
+            </div>
+        </footer>
     </section>
 
 
