Perfectiion the maquette( not link button)

--- a/index.html
+++ b/index.html
@@ -52,22 +52,30 @@
            
            <ul class="main-services">
                <li class="services-item">
-                   <img src="./images/icons/briefcase.svg" alt="" aria-hidden="true">
+                   <div class="services-item-images">
+                        <img src="./images/icons/briefcase.svg" class="services-image" alt="" aria-hidden="true">
+                   </div>
                    <div class="services-item-title">Consultation</div>
                    <div class="services-item-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </div>
                </li>
                <li class="services-item">
-                   <img src="./images/icons/notes.svg" alt="" aria-hidden="true">
+                <div class="services-item-images">
+                    <img src="./images/icons/notes.svg" class="services-image" alt="" aria-hidden="true">
+               </div>
                    <div class="services-item-title">Blogging</div>
                    <div class="services-item-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </div>
                </li>
                <li class="services-item">
-                   <img src="./images/icons/star.svg" alt="" aria-hidden="true">
+                <div class="services-item-images">
+                    <img src="./images/icons/star.svg" class="services-image" alt="" aria-hidden="true">
+               </div>
                    <div class="services-item-title">Social Media</div>
                    <div class="services-item-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </div>
                </li>
                <li class="services-item">
-                   <img src="./images/icons/bolt.svg" alt="" aria-hidden="true">
+                <div class="services-item-images">
+                    <img src="./images/icons/bolt.svg" class="services-image" alt="" aria-hidden="true">
+               </div>
                    <div class="services-item-title">SEO</div>
                    <div class="services-item-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </div>
                </li>
