Add hover effect on navbar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
            <div class="logo"><img src="./images/logo-main@2x.png" alt="" aria-hidden="true"></div>
            <nav class="main-nav">
                <ul class="menu">
-                   <li class="menu-item menu-item-main">HOME</li>
-                   <li class="menu-item">ABOUT</li>
-                   <li class="menu-item">PORFOLIO</li>
-                   <li class="menu-item">BLOG</li>
-                   <li class="menu-item">CONTACT</li>
+                   
+                   <li class="menu-item menu-item-main"> <a href="#">HOME</a> </li>
+                   <li class="menu-item"> <a href="#">ABOUT</a></li>
+                   <li class="menu-item"> <a href="#">PORFOLIO</a></li>
+                   <li class="menu-item"> <a href="#">BLOG</a> </li>
+                   <li class="menu-item"> <a href="#">CONTACT</a> </li>
                </ul>
            </nav>
        </div>
