Add hamburger menu

--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 
    <section class="landing">
        <div class="container">
-           <h1 class="landing-title">At Ubiquity, We care</h1>
-           <p class="landing-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore totam necessitatibus nihil aspernatur voluptates placeat doloremque odio animi quo illo sed dolore esse, ex aperiam. </p>
-           <div class="funfact-icon add-icon" id="badge-landing">
-            <div class="black"></div>
-            <div class="orange"></div>
-            <div class="black"></div>
-            <div class="black"></div>
-            <div class="black"></div>
-            <div class="black"></div>
-            <div class="black"></div>
-            <div class="black"></div>
+            <h1 class="landing-title">At Ubiquity, We care</h1>
+            <p class="landing-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore totam necessitatibus nihil aspernatur voluptates placeat doloremque odio animi quo illo sed dolore esse, ex aperiam. </p>
+            <div class="funfact-icon add-icon" id="badge-landing">
+                <div class="black"></div>
+                <div class="orange"></div>
+                <div class="black"></div>
+                <div class="black"></div>
+                <div class="black"></div>
+                <div class="black"></div>
+                <div class="black"></div>
+                <div class="black"></div>
+            </div>
+            <img src="./images/icons/arrow-circle-left-1.svg"  class="left" alt="" aria-hidden="true">
+            <img src="./images/icons/arrow-circle-left-1.svg" class="right" alt="" aria-hidden="true">
         </div>
-        <img src="./images/icons/arrow-circle-left-1.svg"  class="left" alt="" aria-hidden="true">
-        <img src="./images/icons/arrow-circle-left-1.svg" class="right" alt="" aria-hidden="true">
-       </div>
    </section>
 
    <section class="services">
@@ -98,7 +98,7 @@
             <div class="white" id="white-none-margin"></div>
         </div>
            <p class="introduction-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos deleniti eos id itaque, qui officia perferendis laborum commodi excepturi.</p>
-            <!-- <img src="./images/background/browser-mockup.png" alt="" aria-hidden="true"> -->
+            <img src="./images/background/browser-mockup.png" class="second-background" alt="" aria-hidden="true">
         </div>
    </section>
 
